@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.3.2-Alpha4 
+  	- Fixed a flaw in album art search which only returned a single
+		result, now shows all results and allows you to pick
+		the correct one. 
   	- Added ability to re-define album art search (Thx csammis)
 		https://ampache.bountysource.com/Task.View?task_id=86
   	- Fixed a logic flaw where it would attempt to parse the m3u
